--- a/examples/scan-test/scan.yaml
+++ b/examples/scan-test/scan.yaml
@@ -5,10 +5,10 @@
 apiVersion: "execution.securecodebox.io/v1"
 kind: Scan
 metadata:
-  name: "grype-spring4shell-tomcat"
+  name: "trufflehog-webgoat"
 spec:
-  scanType: "grype"
+  scanType: "trufflehog"
   parameters:
     # Note: Localhost here isn't "your" localhost, but the scanner container.
     # This container doesn't have any ports open...
-    - "rajasoun/spring4shell-tomcat"
+    - "https://github.com/Webgoat/Webgoat"
