--- a/values.yaml
+++ b/values.yaml
@@ -5,7 +5,7 @@
 parser:
   image:
     # parser.image.repository -- Parser image repository
-    repository: realalphaman/parser-trufflehog
+    repository: realalphaman/parse-trufflehog
     # parser.image.tag -- Parser image tag
     # @default -- defaults to the charts version
     tag: null
@@ -29,7 +29,7 @@ parser:
 scanner:
   image:
     # scanner.image.repository -- Container Image to run the scan
-    repository: realalphaman/trufflehog:scb
+    repository: realalphaman/trufflehog
     # scanner.image.tag -- defaults to the charts appVersion
     tag: null
     # -- Image pull policy. One of Always, Never, IfNotPresent. Defaults to Always if :latest tag is specified, or IfNotPresent otherwise. More info: https://kubernetes.io/docs/concepts/containers/images#updating-images
